--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
   "name": "recoil-use",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.0.1",
+  "main": "src/index.ts",
   "repository": "git@github.com:glarivie/recoil-use.git",
-  "author": "Guillaume L. <guillaume@skillup.co>",
+  "author": "Guillaume L. <glarivie@student.42.fr>",
   "license": "MIT",
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint {src,tests}/**/*.{ts,tsx}",
+    "lint:fix": "yarn lint --fix",
+    "lint:types": "tsc --noEmit",
+    "lint:prettier": "prettier --write src/**/**/*.{ts,tsx}",
+    "build:cjs": "tsc",
+    "build:es": "tsc -m esNext --outDir esm",
+    "build": "yarn build:cjs && yarn build:es"
+  },
   "dependencies": {
     "recoil": "^0.1.2"
   },
   "peerDependencies": {
-    "react": "^17.0.1"
+    "react": "^16.13.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^11.1.2",
+    "@testing-library/react-hooks": "^3.4.2",
+    "@types/jest": "^26.0.15",
     "@types/react": "^16.9.56",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
@@ -23,7 +38,14 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "react": "^17.0.1",
+    "jest": "^26.6.3",
+    "prettier": "^2.1.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-recoil-hooks-testing-library": "^0.0.8",
+    "react-test-renderer": "^16.9.0",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
 }
